fix: alignment issues in header

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,6 @@
 header {
-  grid-template-columns: 300px 1fr 150px 300px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .ember-power-select-trigger {
